# dwarf-fortress

./: .cproject  .gitmodules  .project  CMakeLists.txt  Jamroot  Makefile  README.rst  bootstrap  build-config.jam  colors.txt  command line.txt  coverage.css  coverage.sh  dwarf-fortress-libgraphics.doxyfile  dwarf-fortress.conf  extract_symbols.sh  file changes.txt  multiarch.jam  readme.txt  release notes.txt  version
data/art/: font license.txt
data/init/: announcements.txt  arena.txt  colors.txt  d_init.txt  init.txt  interface.txt
data/speech/: ab_specific_hf_seeker.txt  animal_slayer.txt  arch_info_justification.txt  child_age_proclamation.txt  current_profession_no_year.txt  current_profession_year.txt  curse.txt  dwarf.txt  elf.txt  family_relationship_additional.txt  family_relationship_additional_dead.txt  family_relationship_no_spec.txt  family_relationship_no_spec_dead.txt  family_relationship_spec.txt  family_relationship_spec_dead.txt  general.txt  goodbye_worship_1.txt  goodbye_worship_2.txt  goodbye_worship_3.txt  greet.txt  greet_baby.txt  greet_reply.txt  greet_reply_after_hero.txt  greet_reply_diff_language.txt  greet_reply_unusual_first.txt  greet_worship.txt  guard_profession.txt  guard_warning.txt  hist_fig_slayer.txt  hunting_profession.txt  hunting_profession_year.txt  justification_antithetical.txt  justification_experience.txt  justification_proximity.txt  justification_reminder.txt  justification_representation.txt  lair_hunter_minotaur.txt  no_family.txt  past_hunting_profession.txt  past_profession_no_year.txt  (+24 more)
debian/: changelog  control  copyright  dwarf-fortress-bin.install  dwarf-fortress-configure.6.xml  dwarf-fortress-data.dirs  dwarf-fortress-data.install  dwarf-fortress-mod-default.dirs  dwarf-fortress-mod-default.install  dwarf-fortress-mod-ironhand.dirs  dwarf-fortress-mod-ironhand.install  dwarf-fortress-mod-mayday.dirs  dwarf-fortress-mod-mayday.install  dwarf-fortress-mod-phoebus.dirs  dwarf-fortress-mod-phoebus.install  dwarf-fortress-mod.6.xml  dwarf-fortress.6.xml  dwarf-fortress.desktop  dwarf-fortress.install  dwarf-fortress.manpages  dwarf-fortress.menu  gbp.conf  libdwarf-fortress-graphics0.install  rules  version  watch
debian/patches/: 0001-DEBIAN-Added-additional-source-for-dwarf-fortress-te.patch  0002-DEBIAN-Added-CMakeLists.txt.patch  series
debian/scripts/: dwarf-fortress  dwarf-fortress-configure  dwarf-fortress-mod  dwarf-fortress-server
debian/source/: include-binaries
g_src/: KeybindingScreen.cpp  enabler.cpp  enabler.h  enabler_input.h  graphics.cpp  music_and_sound_openal.cpp  renderer_2d.cpp  renderer_2d.hpp  renderer_curses.cpp  renderer_curses.hpp  renderer_offscreen.cpp  renderer_offscreen.hpp  renderer_opengl.cpp  renderer_opengl.hpp  win32_compat.cpp
graphics/: graphics_critters.txt  graphics_dwarves.txt  graphics_example.txt  graphics_humies.txt  graphics_magnut_next_underground.txt  graphics_mayday.txt  graphics_phoebus_animals.txt  graphics_phoebus_dwarves.txt  graphics_phoebus_goblins.txt  graphics_phoebus_humanoids.txt  graphics_phoebus_humans.txt  graphics_phoebus_procedural.txt  graphics_sphr_elves.txt  graphics_sphr_kobolds.txt  graphics_sphr_monsters.txt  version.txt
include/: byteswap.hpp  event_types.hpp  integer_types.hpp  sdl_types.hpp
include/hidden/: dwarf.hpp  global.hpp  hidden.hpp  readme.rst  tetris.hpp  viewscreen.hpp
include/intern/: config.hpp  i18n.hpp  intern.hpp  keybindings.hpp  mutex_variable.hpp  pstring.hpp  text_system.hpp  tile_page.hpp  ttf_manager.hpp
include/meta/: either.hpp  engine.hpp  singleton.hpp
interaction examples/: interaction_region.txt  interaction_secret.txt  interaction_underground_special.txt  interaction_vampire.txt  interaction_werebeast.txt
lib/: libGLEW.so.1.6  libSDL_image-1.2.so.0  libSDL_ttf-2.0.so.0
objects/: b_detail_plan_default.txt  body_default.txt  body_rcp.txt  building_custom.txt  c_variation_default.txt  creature_amphibians.txt  creature_annelids.txt  creature_birds.txt  creature_birds_new.txt  creature_bug_slug_new.txt  creature_desert_new.txt  creature_domestic.txt  creature_insects.txt  creature_large_mountain.txt  creature_large_ocean.txt  creature_large_riverlake.txt  creature_large_temperate.txt  creature_large_tropical.txt  creature_large_tundra.txt  creature_mountain_new.txt  creature_next_underground.txt  creature_ocean_new.txt  creature_other.txt  creature_reptiles.txt  creature_riverlakepool_new.txt  creature_savage_tropical.txt  creature_small_mammal_new.txt  creature_small_mammals.txt  creature_small_ocean.txt  creature_small_riverlake.txt  creature_standard.txt  creature_subterranean.txt  creature_temperate_new.txt  creature_tropical_new.txt  creature_tundra_taiga_new.txt  descriptor_color_standard.txt  descriptor_pattern_special.txt  descriptor_shape_standard.txt  entity_default.txt  inorganic_metal.txt  (+17 more)
objects/text/: book_art.txt
patches/: 0002-Dynamically-load-ncurses.patch  0009-Imported-31.10.patch  0011-Handle-missing-set_escdelay-symbol.patch  0012-Look-for-ncursesw.so.5-and-.so-as-well-as-non-w.patch  0014-First-try-at-truetype-rendering.patch
raw/graphics/: graphics_example.txt
raw/interaction examples/: interaction_secret.txt
raw/objects/: b_detail_plan_default.txt  body_default.txt  body_rcp.txt  building_custom.txt  c_variation_default.txt  creature_birds.txt  creature_domestic.txt  creature_insects.txt  creature_large_mountain.txt  creature_large_ocean.txt  creature_large_riverlake.txt  creature_large_temperate.txt  creature_large_tropical.txt  creature_large_tundra.txt  creature_next_underground.txt  creature_ocean_new.txt  creature_other.txt  creature_reptiles.txt  creature_riverlakepool_new.txt  creature_savage_tropical.txt  creature_small_ocean.txt  creature_standard.txt  creature_subterranean.txt  creature_temperate_new.txt  creature_tropical_new.txt  entity_default.txt  item_tool.txt  (+11 more)
src/: dwarf-fortress  dwarf-fortress-classic  dwarf-fortress-client  dwarf-fortress-server
unused/: enabler.h  music_and_sound_fmodex.cpp  music_and_sound_fmodex.h  renderer_curses.cpp  template.h
(+151 files in other folders)
